# temp-sense

./: .pre-commit-config.yaml  pyproject.toml
temp_sense/: manage.py
temp_sense/api/: admin.py  apps.py  chirpstack.py  data_cleaner.py  discord.py  jobs.py  mail.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
temp_sense/api/management/commands/: discord_device_health.py  discord_notification.py  notification.py  notification_temp_limit_breach.py  send_daily_notification.py  sigmatic_notification.py
temp_sense/api/migrations/: 0001_initial.py  0002_alter_devicereading_options_devicedata_dev_app_key_and_more.py  0003_alter_devicereading_dev_eui.py  0004_devicereading_legacy_id.py  0005_devicedata_dev_nwk_key.py  0006_alter_devicereading_options_and_more.py  0007_alter_devicereading_dev_eui.py  0008_alter_devicedata_dev_owner_email.py  0009_devicedata_dev_temp_limit.py  0010_rename_dev_temp_limit_devicedata_dev_max_accepted_temp_and_more.py  0011_alter_devicedata_dev_max_accepted_temp_and_more.py
temp_sense/temp_sense/: asgi.py  settings.py  urls.py  wsgi.py
